--- a/index.html
+++ b/index.html
@@ -10,10 +10,116 @@
     <title>Football</title>
     <link rel="shortcut icon" href="images/Social Icons/Dribbble.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/6906bbf02d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <section>
-        
-    </section>
+    <div class="header-section">
+        <button class="button-login"> <i class="fas fa-arrow-right"> Login</i></button>
+        <header class="full-header">
+            
+        <div class="header-text">
+            <h1>Connemble</h1><h1>Copa America</h1><h1>2021</h1>
+            <button class="button-login">Watch Live <i class="fas fa-arrow-right"></i></a></button>
+        </div>
+        <div class="header-banner">
+            <img src="images/banner.png" alt="">
+        </div>
+        </header>
+    </div> 
+    <!-- header done -->
+    <!-- section one start -->
+    <main>
+        <section id="section-one">            
+                <div class="players-all">
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-1.png" alt="naymer">
+                        </div>
+                        <div class="player">
+                            <h1>Neymar Jr</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-2.png" alt="Lionel Messi">
+                        </div>
+                        <div class="player">
+                            <h1>Lionel Messi</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>             
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-3.png" alt="Cristiano Ronaldo">
+                        </div>
+                        <div class="player">
+                            <h1>Cristiano Ronaldo</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-4.png" alt="Paulo Dybala">
+                        </div>
+                        <div class="player">
+                            <h1>Paulo Dybala</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-6.png" alt="Mauro Icardi ">
+                        </div>
+                        <div class="player">
+                            <h1>Mauro Icardi </h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-7.png" alt="Di Maria">
+                        </div>
+                        <div class="player">
+                            <h1>Di Maria</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-8.png" alt="Kylian Mbappe">
+                        </div>
+                        <div class="player">
+                            <h1>Kylian Mbappe</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-9.png" alt="Mohammed Salah">
+                        </div>
+                        <div class="player">
+                            <h1>Mohammed Salah</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>
+                    <article class="players">
+                        <div class="player">
+                            <img src="images/players/player-10.png" alt="Harry Kane">
+                        </div>
+                        <div class="player">
+                            <h1>Harry Kane</h1>
+                            <p>Football is one of the world’s most popular game. It is a very much popular game in Bangladesh. It was first origined in England more than 100 years ago. Football is played between 2 teams, each team contains 11 members. in numbers of participants and spectators, Footbal has one of the largest fanbase all over the world.</p>
+                        </div>
+                    </article>           
+                </div>        
+        </section>
+    <!-- section one done     -->
+    <!-- footer start -->
+    <footer>
+        <img src="images/Logo.png" alt="">
+        <p class="icons"><i class="fab fa-instagram"></i> <i class="fab fa-facebook-square"></i><i class="fab fa-twitter-square"></i><i class="fab fa-linkedin"></i></p>
+        <p>copyright<i class="far fa-copyright"> 2021 Football</i></p>
+    </footer>
 </body>
 </html>
